# memexcode

./: README.md  pyproject.toml
memexcode/: _modidx.py  core.py  plugins.py  pluginspec.py  session.py  session_manager.py
memexcode/agent/: events.py  hookspec.py
memexcode/store/: jsonl.py  memory.py  sqlite.py
nbs/: 00_core.ipynb  01_session.ipynb  02_pluginspec.ipynb  03_plugins.ipynb  04a_store.memory.ipynb  04b_store.jsonl.ipynb  04c_store.sqlite.ipynb  05_session_manager.ipynb  06a_agent.events.ipynb  06b_agent.hookspec.ipynb  CRAFT.ipynb  Manager01.ipynb  Manager02.ipynb  Manager02a.ipynb  Manager02b.ipynb  Manager03.ipynb  SideTrack01.ipynb  agentic.ipynb  index.ipynb  nbdev.yml  pi_architecture.md
solveit-reviews/: Dockerfile  docker-layers-and-optimization.md  explore-and-hack.md  filesystem-audit.md  solveit-docker-base-image-hypothesis.md
